--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ gtag('config', 'G-SBYYJCP87F');
   <body>
     <!-- Navigation bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light customNav">
-      <a>HobbyHut</a>
+      <a href="https://alexjohnlangdon.github.io/HW-21-2/">HobbyHut</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -54,7 +54,7 @@ gtag('config', 'G-SBYYJCP87F');
           <li class="nav-item">
             <a class="nav-link" href="#">Hobbies</a>
           <li class="nav-item">
-            <a class="btn btn-primary btn-lg navCTA" href="#" role="button">Contact</a>
+            <a class="btn btn-primary btn-lg navCTA" href="https://alexjohnlangdon.github.io/HW-21-3/" role="button">Contact</a>
           </li>
         </ul>
       </div>
